<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_chart"
        android:icon="@drawable/ic_insert_chart_black_24dp"
        android:title="@string/title_chart" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <!--<item-->
        <!--android:id="@+id/navigation_personal_target"-->
        <!--android:icon="@drawable/ic_person_black_24dp"-->
        <!--android:title="@string/title_personal_target" />-->

    <item
        android:id="@+id/navigation_personal_info"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_personal_info" />

</menu>
