<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_recipe_platform"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.admin.eathealthy.RecipePlatform">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="食譜"
            android:textColor="@android:color/black"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="食材"
            android:textColor="@android:color/black"
            android:textSize="20dp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="代做"
            android:gravity="right"
            android:textColor="@android:color/black"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/bbq" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/Recipe1" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/yes" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/frychicken" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/Recipe2" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/yes" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/tofu" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/Recipe3" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/beef" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/Recipe4" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/yes" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/soup" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/Recipe5" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/no" />
    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_gravity="bottom"-->
        <!--android:background="@color/colorPrimary"-->
        <!--android:orientation="horizontal">-->

        <!--<ImageButton-->
            <!--android:id="@+id/ImageButtonSystemNotice"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:src="@drawable/bell" />-->

        <!--<ImageButton-->
            <!--android:id="@+id/ImageButtonHome"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:src="@drawable/home" />-->

        <!--<ImageButton-->
            <!--android:id="@+id/ImageButtonMember"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:src="@drawable/member" />-->
    <!--</LinearLayout>-->
</LinearLayout>
